src/golden/cards/templates/nested/typeerrors/test.golden/primitivesCantBeSent.fl
	card PrimitivesCantBeSent
		template top
			field1 <- 'hello'
			field2 <- 'hello' => format
			hold <- 'hello'
			
		template format 